tests/ui/traits/next-solver/async.fail.stderr
error[E0271]: expected `{async block@$DIR/async.rs:12:17: 12:22}` to be a future that resolves to `i32`, but it resolves to `()`
  --> $DIR/async.rs:12:17
   |
LL |     needs_async(async {});
   |     ----------- ^^^^^^^^ expected `i32`, found `()`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `needs_async`
  --> $DIR/async.rs:8:31
   |
LL | fn needs_async(_: impl Future<Output = i32>) {}
   |                               ^^^^^^^^^^^^ required by this bound in `needs_async`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
